# keyboard-bridge

./: .gitignore  DOCKER.md  Dockerfile  README.md  SETUP.md  docker-compose.windows.yml  docker-compose.yml  docker-entrypoint.sh  run-docker.bat  run-docker.sh
.github/workflows/: build.yml  ci.yml
src/python/: .pdm-python  README.md  pyproject.toml
src/python/keyboard_bridge/: __init__.py  daemon.py  event_processor.py  virtual_keyboard.py
src/python/stubs/: uinput.pyi
src/typescript/: .eslintrc.cjs  .eslintrc.js  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/typescript/src/: index.ts  keyboard-bridge.ts  keyboard-event-capture.ts  types.ts  websocket-client.ts
