[project]
name = "keyboard-bridge"
version = "1.0.0"
description = "A Python library for creating virtual USB HID keyboard devices and handling keyboard events via WebSocket"
authors = [
    {name = "Keyboard Bridge Team", email = "team@keyboardbridge.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Input/Output",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["keyboard", "hid", "virtual", "websocket", "rdp", "unicode", "composition"]
dependencies = [
    "websockets>=12.0",
    "asyncio-mqtt>=0.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/keyboard-bridge/keyboard-bridge"
Documentation = "https://keyboard-bridge.readthedocs.io"
Repository = "https://github.com/keyboard-bridge/keyboard-bridge"
Issues = "https://github.com/keyboard-bridge/keyboard-bridge/issues"

[project.scripts]
keyboard-bridge = "keyboard_bridge.daemon:cli_main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
package-dir = "keyboard_bridge"
source-includes = ["keyboard_bridge"]

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.pdm.scripts]
dev = "python -m keyboard_bridge.daemon --debug"
lint = "black keyboard_bridge"
sort = "isort keyboard_bridge"
type-check = "mypy keyboard_bridge"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["keyboard_bridge"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=keyboard_bridge",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto" 